The UnitInfo class moves out of BaseAnalyzer into it's own file, and starts learning how to generate code; (Impl|Intf)Generator use this functionality.
git-svn-id: svn://svn.code.sf.net/p/jamon/code/trunk/jamon@501 6afd1a24-8710-0410-9bc4-c69fca332c4c